# raguia-agent-local

./: .gitignore  README.md  README_ADMIN.md  SECURITY.md  install.bat  install.sh  pyproject.toml  raguia_agent.yaml.example
.raguia_agent/: README.md  start.bat  start.sh  stop.bat  stop.sh  test.bat  test.sh
raguia_local_agent/: __init__.py  __main__.py  api_client.py  config.py  connectors.py  queue_store.py  state_store.py  sync_agent.py  tray.py  tray_dialogs.py  updater.py  watcher.py  wizard.py
